# Butterscotch

./: CMakeLists.txt  README.md
cmake/platform/: emscripten.cmake  glfw.cmake  ps2.cmake  sdl2.cmake
src/: data_win.c  data_win.h  data_win_print.c  instance.c  instance.h  renderer.h  runner.c  runner.h  rvalue.h  spatial_grid.c  spatial_grid.h  text_utils.h  vm.c  vm.h  vm_builtins.c  vm_builtins.h
src/emscripten/: image_decoder.c  image_decoder.h  main.c
src/glfw/: gl_legacy_renderer.c  gl_renderer.c  main.c
src/lib/: butterscotch_lib.c  butterscotch_lib.h  software_renderer.c  software_renderer.h
src/ps2/: gs_renderer.c  gs_renderer.h  gs_renderer_flat.c  gs_texture_cache.c  main.c
src/sdl2/: gl_legacy_renderer.c  gl_renderer.h  image_decoder.c  main.c  sdl2_audio_system.c  sdl2_audio_system.h  sdl2_file_system.c  sdl2_file_system.h  sdl2_gamepad.c  sdl2_gamepad.h  sdl2_renderer.c  sdl2_renderer.h
